# OOP_TRITSET

./: CMakeLists.txt  Trit.h  TritSet.cpp  TritSet.h  TritSetFixtures.cpp  main.cpp
lib/googletest-main/: CONTRIBUTING.md  README.md
lib/googletest-main/docs/: gmock_cheat_sheet.md  gmock_for_dummies.md
lib/googletest-main/docs/_layouts/: default.html
lib/googletest-main/docs/reference/: matchers.md  mocking.md
lib/googletest-main/googlemock/: CMakeLists.txt
lib/googletest-main/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-spec-builders.h
lib/googletest-main/googlemock/src/: gmock-spec-builders.cc
lib/googletest-main/googletest/: CMakeLists.txt  README.md
lib/googletest-main/googletest-main/docs/: advanced.md  faq.md  gmock_cook_book.md  gmock_faq.md  pkgconfig.md  primer.md  quickstart-bazel.md  quickstart-cmake.md
lib/googletest-main/googletest-main/docs/reference/: actions.md  testing.md
lib/googletest-main/googletest-main/googlemock/: README.md
lib/googletest-main/googletest/cmake/: Config.cmake.in
lib/googletest-main/googletest/include/gtest/: gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h
lib/googletest-main/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util.h  gtest-port.h
lib/googletest-main/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest-test-part.cc  gtest.cc
lib/googletest-main/googletest/test/: googletest-output-test-golden-lin.txt
